[package]
name = "rusty-sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bson = "2.11.0"
chrono = { version = "0.4.38", features = ["serde"] }
dht22_pi = "1.0.0"
hardware-id = "0.3.0"
mongodb = { version = "2.8.2", features = [
  "bson-chrono-0_4",
  "bson-serde_with",
] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
